[gd_scene load_steps=4 format=3 uid="uid://dviqi31bw24v6"]

[ext_resource type="PackedScene" uid="uid://drptbuna7w3lf" path="res://modules/ui/screens/SequenceScreen.tscn" id="1_ptg3d"]
[ext_resource type="Script" path="res://modules/ui/screens/multiplayer/multiplayer.gd" id="2_merl0"]
[ext_resource type="PackedScene" uid="uid://be2na68dlty5y" path="res://modules/ui/screens/multiplayer/steam/Steam.tscn" id="3_7ykck"]

[node name="Multiplayer" instance=ExtResource("1_ptg3d")]
script = ExtResource("2_merl0")
steam = ExtResource("3_7ykck")
enet = null
solo = null

[node name="Previous" parent="." index="0"]
layout_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="." index="1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.0
offset_top = -70.0
offset_right = 116.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Steam" type="Button" parent="VBoxContainer" index="0"]
texture_filter = 1
layout_mode = 2
offset_top = 56.0
offset_right = 221.0
offset_bottom = 76.0
text = "Play via Steam
"

[node name="Enet" type="Button" parent="VBoxContainer" index="1"]
texture_filter = 1
layout_mode = 2
offset_top = 80.0
offset_right = 221.0
offset_bottom = 100.0
text = "Play via a private server
"

[node name="Solo" type="Button" parent="VBoxContainer" index="2"]
texture_filter = 1
layout_mode = 2
offset_top = 104.0
offset_right = 221.0
offset_bottom = 124.0
text = "Play solo
"

[connection signal="pressed" from="VBoxContainer/Steam" to="." method="_on_steam_pressed"]
[connection signal="pressed" from="VBoxContainer/Enet" to="." method="_on_enet_pressed"]
[connection signal="pressed" from="VBoxContainer/Solo" to="." method="_on_solo_pressed"]
